--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore bundler config.
-/.bundle
-
 # Ignore all logfiles and tempfiles.
 /log/*
 /tmp/*
@@ -17,15 +14,68 @@
 /storage/*
 !/storage/.keep
 
-/node_modules
-/yarn-error.log
 
+# dotenv
 .env
 .env.development
 .env.test
+.env.staging
+.env.production
+.prettierrc
 
-/public/assets
 .byebug_history
+# Ignore precompiled javascript packs
+/public/packs
+/public/packs-test
+/public/assets
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+*.rbc
+capybara-*.html
+.rspec
+/db/*.sqlite3
+/db/*.sqlite3-journal
+/public/system
+/coverage/
+/spec/tmp
+*.orig
+rerun.txt
+pickle-email-*.html
+
+
+config/initializers/secret_token.rb
+config/master.key
+# Only include if you have production secrets in this file, which is no longer a Rails default
+# config/secrets.yml
+
+
+## Environment normalization:
+/.bundle
+/vendor/bundle
+
+# these should all be checked in to normalize the environment:
+# Gemfile.lock, .ruby-version, .ruby-gemset
+
+# unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
+.rvmrc
+
+# if using bower-rails ignore default bower_components path bower.json files
+/vendor/assets/bower_components
+*.bowerrc
+bower.json
+
+# Ignore pow environment settings
+.powenv
+
+# Ignore node_modules
+node_modules/
+/node_modules
+
+
+
+# Ignore yarn files
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
