add TWILIO to env.example, add static_content extension, tweak README, redirect root to login, redirect after login to adminy

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,8 @@ MAILGUN_PORT=587
 MAILGUN_USER=postmaster@mg.dwell.today
 MAILGUN_DOMAIN=mg.dwell.today
 MAILGUN_PASS=
+
+# Programmatic Phone
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_PHONE_NUMBER=
