rename store_controller >> store_controller_decorator

--- a/.env.example
+++ b/.env.example
@@ -30,8 +30,8 @@ AWS_BUCKET=instinct-dna-qa
 # Mailer Credentials
 MAILGUN_HOST=smtp.mailgun.org
 MAILGUN_PORT=587
-MAILGUN_USER=postmaster@mg.dwell.today
-MAILGUN_DOMAIN=mg.dwell.today
+MAILGUN_USER=postmaster@mg.instinct.is
+MAILGUN_DOMAIN=mg.instinct.is
 MAILGUN_PASS=
 
 #DNA API
