--- a/.env.example
+++ b/.env.example
@@ -28,15 +28,15 @@ AWS_REGION_NAME=us-west-1
 AWS_BUCKET=instinct-dna-qa
 
 # Mailer Credentials
-MAILGUN_HOST=smtp.mailgun.org
-MAILGUN_PORT=587
-MAILGUN_USER=postmaster@mg.instinct.is
-MAILGUN_DOMAIN=mg.instinct.is
+MAILGUN_HOST=
+MAILGUN_PORT=
+MAILGUN_USER=
+MAILGUN_DOMAIN=
 MAILGUN_PASS=
 
 #DNA API
-DNA_API_URL=localhost:2000
-DNA_API_KEY=asnfoai483yo4ih3agp4ef
+DNA_API_URL=localhost:3000
+DNA_API_KEY=
 
 # Programmatic Phone
 TWILIO_ACCOUNT_SID=
