--- a/config/spree_storefront.yml
+++ b/config/spree_storefront.yml
@@ -65,3 +65,35 @@ default:
           title: Get up to 30% off
           url: /t/special-offers/30-percent-off
           image: 'meganav/promo_banner_right-third-category.jpg'
+fr:
+  navigation:
+    - title: Femmes
+      url: /fr/t/women
+      promo_banners:
+        - subtitle: Nouvelle collection
+          title: Été 2021
+          url: /fr/t/new-collection/summer-2021
+          image: 'meganav/promo_banner_left-first-category.jpg'
+        - subtitle: Offres spéciales
+          url: /fr/t/special-offers/30-percent-off
+          image: 'meganav/promo_banner_right-first-category.jpg'
+    - title: Hommes
+      url: /fr/t/men
+      promo_banners:
+        - subtitle: Nouvelle collection
+          title: Été 2021
+          url: /fr/t/new-collection/summer-2021
+          image: 'meganav/promo_banner_left-second-category.jpg'
+        - subtitle: Offres spéciales
+          url: /fr/t/special-offers/30-percent-off
+          image: 'meganav/promo_banner_right-second-category.jpg'
+    - title: Vêtements de sport
+      url: /fr/t/sportswear
+      promo_banners:
+        - subtitle: Nouvelle collection
+          title: Été 2021
+          url: /fr/t/new-collection/summer-2021
+          image: 'meganav/promo_banner_left-third-category.jpg'
+        - subtitle: Offres spéciales
+          url: /fr/t/special-offers/30-percent-off
+          image: 'meganav/promo_banner_right-third-category.jpg'
