--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3.4'
 services:
   db:
     image: postgres
+    ports:
+      - "5433:5432"
     volumes:
       - ./tmp/db:/var/lib/postgresql/data
     environment:
