--- a/config/database.yml
+++ b/config/database.yml
@@ -8,12 +8,12 @@ default: &default
 
 development:
   <<: *default
-  database: dna_admin_development
+  database: jordan_colon_admin_development
 
 production:
   <<: *default
-  database: dna_admin_production
+  database: jordan_colon_admin_production
 
 test:
   <<: *default
-  database: dna_admin_test
+  database: jordan_colon_admin_test
